openshift-enterprise/OpenShift.yaml
HeatTemplateFormatVersion: '2012-12-12'
Description: Template for setting up an OpenShift Origin environment
Parameters:
  KeyName: {Description: Name of an existing EC2 KeyPair
      to enable SSH access to the instances, Type: String, MinLength: '1',
    MaxLength: '64', AllowedPattern: '[-_ a-zA-Z0-9]*'}
  Prefix: {Description: Your DNS Prefix, Type: String,
    Default: novalocal}
  UpstreamDNS: {Description: Upstream DNS server,
    Type: String, Default: 8.8.8.8}
  ConfInstallMethod: {Description: Installation method (yum rhsm rhn), Type: String, MinLength: '1',
    MaxLength: '255', Default: yum, Allowed_Values: [yum, rhsm, rhn]}
  ConfSMRegName: {Description: Subscription Manager registration username, Type: String, MinLength: '1',
    MaxLength: '255', Default: username}
  ConfSMRegPass: {Description: Subscription Manager registration password, Type: String, MinLength: '1',
    MaxLength: '255', Default: password}
  ConfSMRegPool: {Description: Pool ID for OpenShift subscription, Type: String, MinLength: '1',
    MaxLength: '255', Default: none}
  ConfRHNRegName: {Description: RHN registration username, Type: String, MinLength: '1',
    MaxLength: '255', Default: username}
  ConfRHNRegPass: {Description: RHN registration password, Type: String, MinLength: '1',
    MaxLength: '255', Default: password}
  ConfRHNRegAK: {Description: RHN activation key for OpenShift subscription, Type: String, MinLength: '1',
    MaxLength: '255', Default: activationkey}
  ConfRHELRepoBase: {Description: RHEL Repo Base, Type: String, MinLength: '1',
    MaxLength: '255', Default: example.com}
  ConfRepoBase: {Description: OSE Repo Base, Type: String, MinLength: '1',
    MaxLength: '255', Default: example.com}
  ConfJBossRepoBase: {Description: JBoss Repo Base, Type: String, MinLength: '1',
    MaxLength: '255', Default: example.com}
  BrokerHostname: {Description: Broker hostname, Type: String, MinLenth: '1', Default: openshift.brokerinstance.novalocal}
  NodeHostname: {Description: Broker hostname, Type: String, MinLenth: '1', Default: openshift.nodeinstance.novalocal}
Mappings:
  JeosImages:
    Broker: {Image: RHEL64-x86_64-broker}
    Node: {Image: RHEL64-x86_64-node}
Resources:
  OpenShiftOriginSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Standard firewall rules
      SecurityGroupIngress:
      - {IpProtocol: udp, FromPort: '53', ToPort: '53',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '53', ToPort: '53',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '22', ToPort: '22',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '80', ToPort: '80',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '443', ToPort: '443',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '8000', ToPort: '8000',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '23', ToPort: '65535',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: icmp, FromPort: '-1', ToPort: '-1',
        CidrIp: 0.0.0.0/0}
  brokerWaitHandle: {Type: 'AWS::CloudFormation::WaitConditionHandle'}
  brokerWaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: BrokerInstance
    Properties:
      Handle: {Ref: brokerWaitHandle}
      Timeout: '6000'
  BrokerIPAddress: {Type: 'AWS::EC2::EIP'}
  BrokerIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: {Ref: BrokerInstance}
      EIP: {Ref: BrokerIPAddress}
  BrokerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::FindInMap: [JeosImages, Broker, Image]
      InstanceType: m1.small
      KeyName: {Ref: KeyName}
      SecurityGroups:
      - {Ref: OpenShiftOriginSecurityGroup}
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - '-'
          - - openshift
            - {Ref: Prefix}
            - broker
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - '#!/bin/bash -x'
            - '

              '
            - export CONF_BROKER_IP_ADDR=
            - {Ref: BrokerIPAddress}
            - '

              '
            - export CONF_NODE_IP_ADDR=
            - {Ref: NodeIPAddress}
            - '

              '
            - export CONF_NAMED_IP_ADDR=
            - {Ref: BrokerIPAddress}
            - '

              '
            - export CONF_DOMAIN=
            - {Ref: Prefix}
            - '

              '
            - export CONF_BROKER_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_NODE_HOSTNAME=
            - {Ref: NodeHostname}
            - '

              '
            - export CONF_NAMED_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_ACTIVEMQ_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_DATASTORE_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export PREFIX=
            - {Ref: Prefix}
            - '

              '
            - export DNS_SEC_KEY=`cat /var/named/K${PREFIX}.*.key  | awk '{print $8}'`
            - '

              '
            - export BROKER_WAIT_HANDLE="
            - {Ref: brokerWaitHandle}
            - '"'
            - '

              '
            - export CONF_INSTALL_METHOD=
            - {Ref: ConfInstallMethod}
            - '

              '
            - export CONF_SM_REG_NAME=
            - {Ref: ConfSMRegName}
            - '

              '
            - export CONF_SM_REG_PASS=
            - {Ref: ConfSMRegPass}
            - '

              '
            - export CONF_SM_REG_POOL=
            - {Ref: ConfSMRegPool}
            - '

              '
            - export CONF_RHN_REG_NAME=
            - {Ref: ConfRHNRegName}
            - '

              '
            - export CONF_RHN_REG_PASS=
            - {Ref: ConfRHNRegPass}
            - '

              '
            - export CONF_RHN_REG_ACTKEY=
            - {Ref: ConfRHNRegAK}
            - '

              '
            - export CONF_REPOS_BASE=
            - {Ref: ConfRepoBase}
            - '

              '
            - export CONF_JBOSS_REPO_BASE=
            - {Ref: ConfJBossRepoBase}
            - '

              '
            - export CONF_RHEL_REPO=
            - {Ref: ConfRHELRepoBase}
            - '

              '
            - export CONF_INSTALL_COMPONENTS=broker,named,datastore,activemq
            - '

              '
            - yum clean all
            - '

              '
            - wget https://raw.github.com/openshift/openshift-extras/enterprise-1.2.z/enterprise/install-scripts/generic/openshift.sh
            - '

              '
            - chmod +x openshift.sh
            - '

              '
            - ./openshift.sh 2>&1 | tee /tmp/openshift.out
            - '

              '
            - echo "${CONF_NODE_HOSTNAME%.${PREFIX}}                      A       ${CONF_NODE_IP_ADDR}" >> /var/named/dynamic/${PREFIX}.db
            - '

              '
            - '# All is well so signal success

              '
            - '/usr/bin/cfn-signal -e 0 --data "${DNS_SEC_KEY}" -r "Broker setup
              complete" "${BROKER_WAIT_HANDLE}"

              '
            - reboot
            - '

              '
  NodeIPAddress: {Type: 'AWS::EC2::EIP'}
  NodeIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: {Ref: NodeInstance}
      EIP: {Ref: NodeIPAddress}
  NodeInstance:
    Type: AWS::EC2::Instance
    DependsOn: brokerWaitCondition
    Properties:
      ImageId:
        Fn::FindInMap: [JeosImages, Node, Image]
      InstanceType: m1.small
      KeyName: {Ref: KeyName}
      SecurityGroups:
      - {Ref: OpenShiftOriginSecurityGroup}
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - '-'
          - - openshift
            - {Ref: Prefix}
            - node
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - '#!/bin/bash -x'
            - '

              '
            - export CONF_BROKER_IP_ADDR=
            - {Ref: BrokerIPAddress}
            - '

              '
            - export CONF_NODE_IP_ADDR=
            - {Ref: NodeIPAddress}
            - '

              '
            - export CONF_NAMED_IP_ADDR=
            - {Ref: BrokerIPAddress}
            - '

              '
            - export CONF_DOMAIN=novalocal
            - '

              '
            - export CONF_BROKER_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_NODE_HOSTNAME=
            - {Ref: NodeHostname}
            - '

              '
            - export CONF_NAMED_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_ACTIVEMQ_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_DATASTORE_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_INSTALL_METHOD=
            - {Ref: ConfInstallMethod}
            - '

              '
            - export CONF_SM_REG_NAME=
            - {Ref: ConfSMRegName}
            - '

              '
            - export CONF_SM_REG_PASS=
            - {Ref: ConfSMRegPass}
            - '

              '
            - export CONF_SM_REG_POOL=
            - {Ref: ConfSMRegPool}
            - '

              '
            - export CONF_RHN_REG_NAME=
            - {Ref: ConfRHNRegName}
            - '

              '
            - export CONF_RHN_REG_PASS=
            - {Ref: ConfRHNRegPass}
            - '

              '
            - export CONF_RHN_REG_ACTKEY=
            - {Ref: ConfRHNRegAK}
            - '

              '
            - export CONF_REPOS_BASE=
            - {Ref: ConfRepoBase}
            - '

              '
            - export CONF_JBOSS_REPO_BASE=
            - {Ref: ConfJBossRepoBase}
            - '

              '
            - export CONF_RHEL_REPO=
            - {Ref: ConfRHELRepoBase}
            - '

              '
            - export CONF_INSTALL_COMPONENTS=node
            - '

              '
            - yum clean all
            - '

              '
            - wget https://raw.github.com/openshift/openshift-extras/enterprise-1.2.z/enterprise/install-scripts/generic/openshift.sh
            - '

              '
            - chmod +x openshift.sh
            - '

              '
            - ./openshift.sh 2>&1 | tee /tmp/openshift.out
            - '

              '
            - reboot
            - '

              '
Outputs:
  OpenShiftConsole:
    Value:
      Fn::Join:
      - ''
      - - https://
        - Fn::GetAtt: [BrokerInstance, PublicIp]
        - /console
    Description: URL for OpenShift Origins console
  NameServerEntry:
    Value:
      Fn::Join:
      - ''
      - - 'nameserver '
        - Fn::GetAtt: [BrokerInstance, PublicIp]
    Description: Entry to insert into /etc/resolv.conf for application
      host names to resolve
